feat: 收口标准排序Web能力